# ZKAP

./: .clang-format  .gitignore  Dockerfile  LICENSE  README.md  bmk_names.txt  detect.py  eval.py  eval_detect.py  generate.py
benchmarks/aes-circom/: aes_256_ctr_test.circom  aes_256_encrypt_test.circom  aes_256_key_expansion_test.circom  gcm_siv_dec_2_keys_test.circom  gcm_siv_enc_2_keys_test.circom  gfmul_int_test.circom  mul_test.circom  polyval_test.circom
benchmarks/circom-ecdsa/: ECDSAVerifyNoPubkeyCheck@circom-ecdsa@n=64@k=4.circom  bigadd@circom-ecdsa@n=1@k=5.circom  bigadd@circom-ecdsa@n=2@k=3.circom  (+13 more)
circom2llvm/: Cargo.toml
circom2llvm/circom2llvm/: Cargo.toml
circom2llvm/circom2llvm/src/: main.rs
circom2llvm/ir_generator/: Cargo.toml
circom2llvm/ir_generator/src/: after_process.rs  codegen.rs  environment.rs  expression_codegen.rs  expression_static.rs  function.rs  generator.rs  info_collector.rs  interpret_fn.rs  lib.rs  namer.rs  scope.rs  scope_information.rs  statement.rs  summarygen.rs  template.rs  type_check.rs  type_infer.rs  utils.rs
detectors/: All.cpp  CMakeLists.txt  MissingAssumptionCheck.cpp  NonuniformConstraint.cpp  PrintGraphInfo.cpp  PrintGraphviz.cpp  ProtocolFlowGraph.cpp  ProtocolFlowGraph.hpp  UnconstrainedCompInput.cpp  UnconstrainedOutput.cpp  UnusedCompOutput.cpp  UnusedSignal.cpp  detectors  test.cpp  utils.cpp  utils.hpp  utils_arrayshapes.cpp  utils_arrayshapes.hpp  utils_basicinfo.cpp  utils_basicinfo.hpp
results/: CircomspecError.csv  ZKSolid.csv  ZKSolidRefined.csv
utils/: utils.py
(+408 files in other folders)
