[package]
name = "circom2llvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ir_generator = {path = "../ir_generator"}
parser = {path = "../parser"}
program_structure = {path = "../program_structure"}
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }
clap = { version = "4.0.18", features = ["derive"] }
